# XenonRecompUnlim

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  vcpkg.json
PowerAnalyse/: CMakeLists.txt  function.cpp  function.h  main.cpp
PowerRecomp/: CMakeLists.txt  main.cpp  pch.h  recompiler.cpp  recompiler.h  recompiler_config.cpp  recompiler_config.h  swa_recompiler.cpp  swa_recompiler.h  test_recompiler.cpp
PowerSample/: CMakeLists.txt
PowerTests/: CMakeLists.txt
PowerUtils/: CMakeLists.txt  disasm.cpp  disasm.h  elf.h  file.h  image.cpp  image.h  ppc_context.h  section.h  symbol.h  symbol_table.h  xbox.h  xdbf.h  xdbf_wrapper.cpp  xdbf_wrapper.h  xex.cpp  xex.h
XenonAnalyse/: CMakeLists.txt  main.cpp
XenonRecomp/: CMakeLists.txt  main.cpp  recompiler.cpp  recompiler.h  recompiler_config.cpp  recompiler_config.h  test_recompiler.cpp  test_recompiler.h
XenonSample/: .gitignore  CMakeLists.txt
XenonTests/: CMakeLists.txt
XenonUtils/: CMakeLists.txt  PPC_miss_commands.py  boundaries.py  byteswap.h  disasm.h  image.cpp  image.h  memory_mapped_file.cpp  memory_mapped_file.h  ppc_context.h  symbol_table.h  xbox.h  xdbf_wrapper.h  xex.cpp  xex.h  xex_patcher.cpp  xex_patcher.h
cmake/: bin2h.cmake
tests/: compile-all.bat  compile.bat
tests/PowerAnalyse/: add.cpp  loop.cpp
tests/XenonAnalyse/: add-cond.cpp  add-cond.elf  add.elf  cond-fall.cpp  cond-fall.elf  cond.cpp  cond.elf  loop.elf
tools/file_to_c/: CMakeLists.txt  file_to_c.cpp
